[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/color.png" type="Texture" id=1]
[ext_resource path="res://scripts/redsplash.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 37.6201

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="redsplash" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
linear_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
